<resources>
    <string name="app_name">Tiketku</string>
    <string name="slogan">Wisata Jadi Lebih Nyaman</string>
    <string name="signin">SIGN IN</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email Address</string>
    <string name="continue_label">Continue</string>
    <string name="name_label">Nama</string>
    <string name="bio_label">Passion Anda</string>

</resources>
